logs/dag_id=postgres_operator_1/run_id=manual__2024-06-24T01:59:25.588883+00:00/task_id=create_table/attempt=2.log
[2024-06-24T02:00:27.746+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-24T02:00:27.765+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_operator_1.create_table manual__2024-06-24T01:59:25.588883+00:00 [queued]>
[2024-06-24T02:00:27.770+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_operator_1.create_table manual__2024-06-24T01:59:25.588883+00:00 [queued]>
[2024-06-24T02:00:27.771+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 6
[2024-06-24T02:00:27.780+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_table> on 2024-06-24 01:59:25.588883+00:00
[2024-06-24T02:00:27.785+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=549) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-24T02:00:27.787+0000] {standard_task_runner.py:63} INFO - Started process 550 to run task
[2024-06-24T02:00:27.787+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_1', 'create_table', 'manual__2024-06-24T01:59:25.588883+00:00', '--job-id', '19', '--raw', '--subdir', 'DAGS_FOLDER/dag_create_table.py', '--cfg-path', '/tmp/tmpswtjockt']
[2024-06-24T02:00:27.790+0000] {standard_task_runner.py:91} INFO - Job 19: Subtask create_table
[2024-06-24T02:00:27.822+0000] {task_command.py:426} INFO - Running <TaskInstance: postgres_operator_1.create_table manual__2024-06-24T01:59:25.588883+00:00 [running]> on host 18d040e2d413
[2024-06-24T02:00:27.863+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='postgres_operator_1' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-06-24T01:59:25.588883+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-24T01:59:25.588883+00:00'
[2024-06-24T02:00:27.866+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-24T02:00:27.875+0000] {sql.py:276} INFO - Executing: 
        create table if not exists ***(
            department_name varchar,
            sensor_serial varchar,
            create_at timestamp,
            product_name varchar,
            product_expire timestamp,
        )
    
[2024-06-24T02:00:27.881+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-24T02:00:27.888+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-24T02:00:27.907+0000] {sql.py:487} INFO - Running statement: 
        create table if not exists ***(
            department_name varchar,
            sensor_serial varchar,
            create_at timestamp,
            product_name varchar,
            product_expire timestamp,
        )
    , parameters: None
[2024-06-24T02:00:27.911+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-24T02:00:27.912+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:         )
                ^

[2024-06-24T02:00:27.921+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=postgres_operator_1, task_id=create_table, run_id=manual__2024-06-24T01:59:25.588883+00:00, execution_date=20240624T015925, start_date=20240624T020027, end_date=20240624T020027
[2024-06-24T02:00:27.930+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 19 for task create_table (syntax error at or near ")"
LINE 8:         )
                ^
; 550)
[2024-06-24T02:00:27.970+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-24T02:00:27.981+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-24T02:00:27.984+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
